--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     font-family: Arial, sans-serif;
     text-align: center;
-    background-image: url('./images/15.jpg');
+    background-image: url('../images/15.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: repeat-y;
