--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ footer {
         display: none; /* لمتصفحات كروم وسفاري */
     }
     header {
-        background-image: url('../images/168.png');
+        background-image: url('./images/168.png');
         background-position-x: left;
         direction: rtl;
         flex-direction: row;
@@ -194,7 +194,7 @@ footer {
         flex-direction: column;
         background-color: #d1a25b;
         position: absolute;
-        top: 80px;
+        top: 110px;
         left: 10px;
         width: 40%;
         padding: 10px 5px;
