--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     font-family: Arial, sans-serif;
     text-align: center;
-    background-image: url('../images/15.jpg');
+    background-image: url('./images/15.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: repeat-y;
@@ -33,7 +33,7 @@ body::-webkit-scrollbar {
         4px -4px 0px #7d000056;
 }
 header {
-    background-image: url('../images/168.png');
+    background-image: url('./images/168.png');
     background-repeat: no-repeat;
     background-position-x: center;
     direction: rtl;
